--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../PersonalPage/css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Italo Lima</title>
 </head>
 
@@ -40,7 +40,7 @@
     <section id="intro">
       <div id="container-intro">
         <figure id="img-intro">
-          <img id="foto-perfil" src="../PersonalPage/img/my-octocat-1616593482069.png" alt="Foto-perfil">
+          <img id="foto-perfil" src="img/my-octocat-1616593482069.png" alt="Foto-perfil">
         </figure>
 
         <div id="conteudo-intro">
@@ -60,49 +60,49 @@
     <div id="container-02">
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/certifLogicaProg.PNG" alt="Certificado">
+            <img src="img/certifLogicaProg.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/certifHtmlCss.PNG" alt="Certificado">
+            <img src="img/certifHtmlCss.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/certifIntroJavaScript.PNG" alt="Certificado">
+            <img src="img/certifIntroJavaScript.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/certifIntroGit&Hub.PNG" alt="Certificado">
+            <img src="img/certifIntroGit&Hub.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/intoCsharp.PNG" alt="Certificado">
+            <img src="img/intoCsharp.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/cSharpComp.PNG" alt="Certificado">
+            <img src="img/cSharpComp.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/pooCSharp.PNG" alt="Certificado">
+            <img src="img/pooCSharp.PNG" alt="Certificado">
           </figure>
         </div>
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/FundTest.PNG" alt="Certificado">
+            <img src="img/FundTest.PNG" alt="Certificado">
           </figure>
         </div>
         
@@ -118,9 +118,9 @@
         <h3>Back-end Developer</h3>
         <p>Buscando desenvolver cada vez mais meu conhecimento, mantenho uma rotina de estudos das principais tecnologias para a área de Back-end, entre elas o eco-sistema DotNet, do qual tenho grande admiração e pretendo me tornar um .Net Developer</p>
         <figure class="img-coluna">
-          <img src="../PersonalPage/img/logoCSharp.png" alt="csharp-icone">
-          <img src="../PersonalPage/img/logoJava.png" alt="java-icone">
-          <img src="../PersonalPage/img/logoSqlServer.png" alt="banco-de-dados-icone">
+          <img src="img/logoCSharp.png" alt="csharp-icone">
+          <img src="img/logoJava.png" alt="java-icone">
+          <img src="img/logoSqlServer.png" alt="banco-de-dados-icone">
         </figure>
       </div>
 
@@ -128,9 +128,9 @@
         <h3>Front-end Developer</h3>
         <p>Quem não gosta de ver sites bem elaborados e dinâmicos! Me dei conta de que aprender as principais tecnologias no desenvolvimento Front-end seria fundametal para mim, então busco me aprimorar nas ferramentas como HTML, CSS, JavaScript, Framework's e bibliotecas.</p>
         <figure class="img-coluna">
-          <img src="../PersonalPage/img/logoHTML.png" alt="html-icone">
-          <img src="../PersonalPage/img/logoCSS.png" alt="css-icone">
-          <img src="../PersonalPage/img/logoJS.png" alt="java-script-icone">
+          <img src="img/logoHTML.png" alt="html-icone">
+          <img src="img/logoCSS.png" alt="css-icone">
+          <img src="img/logoJS.png" alt="java-script-icone">
         </figure>
       </div>
 
@@ -138,8 +138,8 @@
         <h3>Outros</h3>
         <p>Ser um Desenvolvedor Full-Stack é o sonho pelo qual muitos estudantes de tecnologia seguem com total dedicação, Eu não sou diferente, minha jornada já iniciou, agora é continuar evoluindo até alcançar meu objetivo.</p>
         <figure class="img-coluna">
-          <img src="../PersonalPage/img/notepng.png" alt="notebook-icone">
-          <img src="../PersonalPage/img/phonepng.png" alt="celular-icone">
+          <img src="img/notepng.png" alt="notebook-icone">
+          <img src="img/phonepng.png" alt="celular-icone">
         </figure>
       </div>
     </div>
@@ -149,10 +149,10 @@
   <!-- Rodapé -->
   <footer id="final">
     <div id="contato">
-      <a href="https://linkedin.com/in/italo-lima-a1591b189" target="_blank"><img src="../PersonalPage/img/linkedin-circle.png"
+      <a href="https://linkedin.com/in/italo-lima-a1591b189" target="_blank"><img src="img/linkedin-circle.png"
           alt="icone-linkedin"></a>
-      <a onclick="alerta()" href="#!"><img src="../PersonalPage/img/email-ciclo.png" alt="icone-email"></a>
-      <a href="https://github.com/ItaloLimma" target="_blank"><img src="../PersonalPage/img/github-circle.png"
+      <a onclick="alerta()" href="#!"><img src="img/email-ciclo.png" alt="icone-email"></a>
+      <a href="https://github.com/ItaloLimma" target="_blank"><img src="img/github-circle.png"
           alt="icone-github"></a>
     </div>
     <p>By Italo Lima&copy; 2021</p>
@@ -162,7 +162,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="../PersonalPage/js/global.js"></script>
+  <script type="text/javascript" src="js/global.js"></script>
 </body>
 
 </html>
