implementação da responsividade do site

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
         <div id="conteudo-intro">
           <h3>Bem Vindo</h3>
           <p>
-            Olá, me chamo Italo, sou amante da tecnologia e sigo investindo esforços com total dedicação para me tornar um Desenvolvedor Full Stack. Atualmente estou cursando Análise e Desenvolvimento de Sistemas, além de cursos online voltados para a área.
+            Olá, me chamo Italo, sou amante da tecnologia e sigo investindo esforços com total dedicação para me tornar um Desenvolvedor Full Stack. Atualmente estou cursando Análise e Desenvolvimento de Sistemas, além de cursos online voltados para a área. <br><br> Navegue e Divirta-se!
           </p>
-          <p>Navegue e Divirta-se!</p>
         </div>
       </div>
     </section>
