--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
             <img src="../PersonalPage/img/FundTest.PNG" alt="Certificado">
           </figure>
         </div>
+
+        <div class="certificado">
+          <figure class="area-certif">
+            <img src="../PersonalPage/img/ImgCertSQLServer.PNG" alt="Certificado">
+          </figure>
+        </div>
         
     </div>
   </section>
