--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <div class="certificado">
           <figure class="area-certif">
-            <img src="../PersonalPage/img/sqlintroServer.PNG" alt="Certificado">
+            <img src="img/sqlintroServer.PNG" alt="Certificado">
           </figure>
         </div>
         
